# Country-GraphQL-Service

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
services/graphql-service/app/: settings.py
services/graphql-service/app/db/: database.py
services/graphql_service/: .gitignore  .pre-commit-config.yaml  =3.0.0  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
services/graphql_service/alembic/: env.py
services/graphql_service/alembic/versions/: 3798bf19a58a_update_countries_population_defualt_.py  3a05cc1e4230_update_countries_population_defualt_.py  47a1f151cb8f_country_migration.py  54019045b351_update_countries_table.py  60f735becb5b_update_countries_population_defualt_.py  724a69ef3423_update_countries_table.py  86fa405794f1_update_countries_population_defualt_.py  9acb70c0b8ab_create_countries_table.py  e0fd07a9f797_init.py
services/graphql_service/app/: custom_graphiql_handler.py  graphiql.py  main.py  settings.py
services/graphql_service/app/api/: routes.py
services/graphql_service/app/api/controllers/countries/: countries.py
services/graphql_service/app/db/: database.py  sync_database.py
services/graphql_service/app/enumarates/: utils.py
services/graphql_service/app/graphene_schema_input/: countries.py
services/graphql_service/app/models/: __init__.py  basemodel.py  country.py
services/graphql_service/app/notification/: email_service.py
services/graphql_service/app/resolvers/: countries.py
services/graphql_service/app/scheduler/: scheduler.py
services/graphql_service/app/schemas/: graphene_schema.py  passtest.py
services/graphql_service/app/services/: countries.py
services/graphql_service/app/validation/: countries.py
services/graphql_service/ingestion_service/: ingestion.py
services/graphql_service/tests/: conftest.py  test_countries.py  test_graphene_queries.py
services/notification_service/: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
services/notification_service/app/: main.py  settings.py
services/notification_service/app/api/: routes.py
services/notification_service/app/api/controllers/notify/: notify.py
services/notification_service/app/schema/: main.py
services/notification_service/app/services/: email.py
services/notification_service/app/utils/: exceptions.py  response.py
