[project]
name = "country-graphql-service"
version = "0.1.0"
description = ""
authors = [
    {name = "muhammedzaigo",email = "muhammed@zaigoinfotech.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.124.0,<0.125.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=25.12.0,<26.0.0)",
    "ruff (>=0.14.8,<0.15.0)",
    "pytest (>=9.0.2,<10.0.0)"
]
